syntax = "proto3";
package coupon.v1;

option go_package = "github.com/dalcon10028/coxwave_backend_coding_test/gen/coupon/v1;couponv1";

import "google/protobuf/timestamp.proto";

service CouponService {
  rpc CreateCampaign (CreateCampaignRequest) returns (CreateCampaignResponse);
  rpc GetCampaign    (GetCampaignRequest)    returns (GetCampaignResponse);
  rpc IssueCoupon    (IssueCouponRequest)    returns (IssueCouponResponse);
}

message CreateCampaignRequest {
  int64 total_coupons = 1;
  google.protobuf.Timestamp start_at = 2;
}

message CreateCampaignResponse {
  int64 campaign_id = 1;
}

message GetCampaignRequest {
  int64 campaign_id = 1;
}

message GetCampaignResponse {
  int64 campaign_id   = 1;
  int64 total_coupons = 2;
  repeated string issued_codes = 3;
}

message IssueCouponRequest {
  int64 campaign_id = 1;
}

message IssueCouponResponse {
  bool success      = 1;
  string coupon_code = 2;
}